--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "wanphp/installers": "*",
-    "guzzlehttp/guzzle": "^7.1",
+    "wanphp/libray-slim": "^1.0.0",
     "predis/predis": "^1.1.0",
     "ext-openssl": "*",
     "ext-dom": "*",
