--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,13 @@
     "ext-libxml": "*",
     "ext-simplexml": "*"
   },
+  "config": {
+    "process-timeout": 0,
+    "sort-packages": true,
+    "allow-plugins": {
+      "wanphp/installers": true
+    }
+  },
   "autoload": {
     "psr-4": {
       "Wanphp\\Libray\\User\\": "/"
